2016-07-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (apropos_in_all_indices): Only free file buffer 
	if we had to load it.  Otherwise the file buffer could still be 
	referenced.  Fixes crash reported by "mtsio@cryptolab.net".
	* info/nodes.c (check_loaded_file): Function split out from 
	info_find_file.

2016-07-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* dco/texinfo-tex-test.texi (Test of auxiliary files): Add test
	of macro used in index entry.

2016-07-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\macrolist, \addtomacrolist, \unmacro): Store
	list of macros with "\commondummyword" instead of 
	"\definedummyword", so that we remove the macro when writing an 
	index sort key.  Otherwise, texindex can produce a broken sorted 
	index file.  This fixes bug introduced on 2016-05-28, when the 
	macros used in \commondummiesnofonts were changed.

2016-07-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\ktable): Add to implement @ktable, following 
	pattern of \ftable and \vtable.

2016-07-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/dir.c (build_dir_node): Save contents of dir node.  This 
	avoids a memory leak when hide-node-references=On due to 
	scan_node_contents overwriting node->contents.

2016-07-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/dir-merge.sh: New test.

2016-07-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Command List) <@copying>: Correctly say
	to end with "@end copying".  Reported by Daniel Birket.

2016-07-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\defmacro): Remove separate code for 
	recursive and non-recursive macros, because the code is 
	identical now (except possibly for macros of more than 9 
	arguments).

2016-07-11  Brandon Invergo  <brandon@gnu.org>

	* util/htmlxref.cnf (gnat_ugn_unw, gnat_ugn): Change manual name 
	and location.

2016-07-10  Gavin Smith  <gavinsmith0123@gmail.com>
